<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">


    <TextView
        android:id="@+id/signuptext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/poppinsbold"
        android:gravity="center"
        android:text="@string/signup"
        android:textColor="@color/green_500"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/fullnameSignUp"
        android:layout_width="351dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:drawableEnd="@drawable/ic_name"
        android:ems="10"
        android:fontFamily="@font/poppinsmedium"
        android:hint="@string/fullname"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signuptext" />

    <EditText
        android:id="@+id/emailSignUp"
        android:layout_width="351dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:drawableEnd="@drawable/ic_email"
        android:ems="10"
        android:fontFamily="@font/poppinsmedium"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fullnameSignUp" />

    <EditText
        android:id="@+id/usernameSignUp"
        android:layout_width="351dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:drawableEnd="@drawable/ic_user"
        android:ems="10"
        android:fontFamily="@font/poppinsmedium"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailSignUp" />

    <EditText
        android:id="@+id/passwordSignUp"
        android:layout_width="351dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:drawableEnd="@drawable/ic_pass"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameSignUp" />

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordSignUp" />

    <Button
        android:id="@+id/btnSignUp"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progress" />

    <TextView
        android:id="@+id/signuphere"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppinsmedium"
        android:text="@string/loginhere"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSignUp"
        app:layout_constraintVertical_bias="0.28" />

</androidx.constraintlayout.widget.ConstraintLayout>